--- a/app/oscitk/themes/Fuchsia/styles/_section.scss
+++ b/app/oscitk/themes/Fuchsia/styles/_section.scss
@@ -6,7 +6,7 @@ body {
 	background-color: white;
 
 	// Baseline font-size
-	font-size: 16px;
+	font-size: 18px;
 	line-height: 24px;
 
 	width: calc( 100% - #{$toolbar-width} );
@@ -113,8 +113,15 @@ body {
 
 		}
 
+		// Paragraph styles affect tooltips too
 		.tooltip-inner {
 			text-indent: 0;
+		}
+
+		// Ensure that the plate image(s) take up max space w/o overflowing
+		.plate {
+			max-width: 100%;
+			max-height: 100%;
 		}
 
 	}
