--- a/app/oscitk/themes/Fuchsia/styles/css/main.css
+++ b/app/oscitk/themes/Fuchsia/styles/css/main.css
@@ -8065,7 +8065,7 @@ body {
 /* line 5, ../_section.scss */
 #section {
   background-color: white;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 24px;
   width: calc( 100% - 300px );
 }
@@ -8142,12 +8142,17 @@ body {
 #section #section-view p .glossary-term:hover {
   cursor: hand;
 }
-/* line 116, ../_section.scss */
+/* line 117, ../_section.scss */
 #section #section-view .tooltip-inner {
   text-indent: 0;
 }
+/* line 122, ../_section.scss */
+#section #section-view .plate {
+  max-width: 100%;
+  max-height: 100%;
+}
 
-/* line 127, ../_section.scss */
+/* line 134, ../_section.scss */
 .loader {
   margin: 80px auto;
   overflow: hidden;
@@ -8164,7 +8169,7 @@ body {
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
 }
-/* line 148, ../_section.scss */
+/* line 155, ../_section.scss */
 .loader, .loader:after {
   border-radius: 50%;
   width: 10em;
@@ -8194,90 +8199,85 @@ body {
 #navigation {
   font-family: sans-serif;
   font-size: 0.8em;
+  line-height: 20px;
   position: fixed;
   bottom: 20px;
   right: 0px;
   width: 300px;
   padding: 10px;
+  background-color: transparent;
 }
-/* line 13, ../_navigation.scss */
+/* line 15, ../_navigation.scss */
 #navigation .chapter-info {
   display: inline-block;
-  width: calc( 100% - 30px );
+  width: calc( 100% - 50px );
 }
-/* line 17, ../_navigation.scss */
+/* line 20, ../_navigation.scss */
 #navigation .chapter-info .chapter-number {
   font-family: "Bitter", Georgia, "Times New Roman", Times, serif;
-  font-size: 12px;
+  font-size: 14px;
 }
-/* line 23, ../_navigation.scss */
+/* line 26, ../_navigation.scss */
 #navigation .chapter-info .chapter-title {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 14px;
 }
-/* line 31, ../_navigation.scss */
+/* line 34, ../_navigation.scss */
 #navigation .btn-page {
   display: inline-block;
-  height: 100%;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   cursor: pointer;
-  text-align: center;
+  background-image: url(../../images/icon-arrow-grey.png);
 }
-/* line 41, ../_navigation.scss */
-#navigation .btn-page:hover {
-  color: #888;
-}
-/* line 44, ../_navigation.scss */
-#navigation .btn-page:hover .indicator {
-  opacity: 1;
-}
-/* line 49, ../_navigation.scss */
-#navigation .btn-page.prev-page {
-  width: 15px;
-}
-/* line 53, ../_navigation.scss */
+/* line 48, ../_navigation.scss */
 #navigation .btn-page.next-page {
-  width: 15px;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
 }
-/* line 57, ../_navigation.scss */
+/* line 60, ../_navigation.scss */
 #navigation .btn-page.inactive {
   display: none;
 }
-/* line 61, ../_navigation.scss */
-#navigation .btn-page .indicator {
-  position: absolute;
-  top: 50%;
-  text-indent: 100%;
-  overflow: hidden;
-  height: 100%;
-  width: 100%;
-  opacity: 0.4;
+@media (max-width: 991px) {
+  /* line 1, ../_navigation.scss */
+  #navigation {
+    background-color: #676767;
+    width: 100%;
+    bottom: 0;
+    padding-bottom: 0px;
+  }
+  /* line 77, ../_navigation.scss */
+  #navigation .chapter-info {
+    color: #fff;
+  }
+  /* line 81, ../_navigation.scss */
+  #navigation .chapter-info .chapter-number,
+  #navigation .chapter-info .chapter-title {
+    display: inline-block;
+    height: 20px;
+  }
+  /* line 87, ../_navigation.scss */
+  #navigation .chapter-info .chapter-title {
+    margin-left: 30px;
+  }
 }
 
-/*
-.progress.vertical {
-  position: fixed;
-  top: 70px;
-  right: 40px;
-  width: .25em;
-  height: 85%;
+/* line 99, ../_navigation.scss */
+.progress {
+  height: 6px;
+  margin-bottom: 10px;
 }
-.progress.vertical.bottom {
-  position: relative;
-}
-.progress.vertical.bottom .progressbar-front-text {
-  position: absolute;
-  bottom: 0;
-}
-.progress.vertical .progress-bar {
-  width: 100%;
-  height: 0;
-  -webkit-transition: height 0.6s ease;
-  -o-transition: height 0.6s ease;
-  transition: height 0.6s ease;
-}
-*/
 /* line 105, ../_navigation.scss */
+.progress .progress-bar.progress-bar-fuchsia {
+  background-color: #fa5d78;
+}
+
+/* line 114, ../_navigation.scss */
 *.unselectable {
   -moz-user-select: none;
   -khtml-user-select: none;
